service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-demo
spec:
  selector:
    app: app-demo
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
