virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-demo-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - app-demo-gateway
  http:
    - match:
        - uri:
            prefix: /api/app-demo
      rewrite:
          uri: /
      route:
        - destination:
            host: app-demo
            port:
              number: 8080
